Implemented process of project create. Improved exception handling.

--- a/reliability-webapp/src/main/webapp/script/framework/view/tpl/project/project-list.tpl.htm
+++ b/reliability-webapp/src/main/webapp/script/framework/view/tpl/project/project-list.tpl.htm
@@ -1,6 +1,6 @@
 <div class="actionMenu">
 	<a href="#createNew"
-		onclick="getContext().getProjectController().getAll()"
+		onclick="getContext().getProjectController().getCreateProjectDialog()"
 		class="buttonCreate" title="Add New Project">Create Project</a>
 </div>
 <div id="projectListPlace" style="width: 100%">
