Implemented experiment view.

--- a/reliability-webapp/src/main/webapp/script/framework/view/tpl/project/project-info.tpl.htm
+++ b/reliability-webapp/src/main/webapp/script/framework/view/tpl/project/project-info.tpl.htm
@@ -25,22 +25,11 @@
 	<div id="metricTab" class="ui-helper-clearfix"></div>
 	<div id="reliabilityTab" class="ui-helper-clearfix">
 	<div>
-		<span style="font-weight: bold;">Reliability functions</span>
-		<hr />
-			<form>
-				<label for="reliabilityInterval" style="font-weight: bold; margin-top: 10px;">Number of intervals:</label>
-				<input type="text" name="reliabilityInterval" id="reliabilityInterval" style="width: 100px; margin-top: 10px;" />
-
-				<label for="reliabilityL" style="font-weight: bold; margin-top: 10px;">L:</label>
-				<input type="text" name="reliabilityL" id="reliabilityL" style="width: 100px; margin-top: 10px;" />
-
-				<label for="reliabilityB" style="font-weight: bold; margin-top: 10px;">B:</label>
-				<input type="text" name="reliabilityB" id="reliabilityB" style="width: 100px; margin-top: 10px;" />
-				<br />
-				<br />
-				<a href="#showLambdaGraph" class="showMyuGraph" onclick="getContext().getGraphController().createMyuChart()">Show Myu Graph</a>
-				<a href="#showMyuGraph" class="showLambdaGraph" onclick="getContext().getGraphController().createLambdaChart()">Show Lambda Graph</a>
-			</form>
+			<span style="font-weight: bold;">Experiments</span>
+			<hr />
+			<br />
+			<div class="experimentPlace">
+			</div>
 	</div>
 	
 	
